# mnist_read

./: Cargo.toml  README.md
src/: lib.rs
tests/: tests.rs
