[package]
name = "mnist_read"
version = "1.0.0"
authors = ["Jonathan Woollett-Light <jonathanwoollettlight@gmai.com>"]
edition = "2018"

description = "Reads generic data and label files in the MNIST file format."
license = "Apache-2.0"
exclude = ["tests","mnist"]

repository = "https://github.com/JonathanWoollett-Light/mnist_read"
documentation = "https://docs.rs/mnist_read/"

keywords = ["mnist","machine-learning","encoding data"]
catagories= ["science","encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.1" # For examples